# school-cover-parser

./: .gitignore  Departments.csv  Make Cover Documents.lnk  Notice Board Summary.html  PUBLISH.md  README.md  School Cover Parser.lnk  class_codes_departments.csv  main.py  pyproject.toml  requirements.txt  simplified_sheet.html  subject_codes.csv  supply_tables.html  table_template.html
outputs/: cover_sheet-OLP-SW-ITS03.html  cover_sheet.html  simplified_sheet.html  supply_rooms_sheet.html  supply_sheet.html  supply_tables.html
school_cover_parser/: __init__.py  __main__.py  class_codes_departments.csv  cli.py
school_cover_parser/static/: README.txt
school_cover_parser/templates/: supply_info.html
templates/: supply_info.html  table_template.html
test_data/: Notice Board Summary 3.html  Notice Board Summary.html
